# docker-workshop

./: .gitignore  Dockerfile  pyproject.toml  run.md
notebooks/: notebook.ipynb
pipeline/: pipeline.py
src/: ingest_data.py
